--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,20 @@
 {
-    "cSpell.words": [
-        "Synera"
-    ]
+  "cSpell.words": [
+    "Synera"
+  ],
+
+  "name": "projeto-backend",
+  "version": "1.0.0",
+  "type": "module",
+  "main": "app.js",
+
+  "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "sqlite3": "^5.1.6"
+  },
+
+  "editor.formatOnSave": true,
+  "files.autoSave": "afterDelay",
+  "files.autoSaveDelay": 1000
 }
