--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "express-session": "^1.18.2",
+    "gitignore": "^0.7.0",
     "multer": "^2.0.2",
     "node": "^25.2.1",
     "passport": "^0.7.0",
